// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is Footer 1`] = `
<div
  className="footer-form"
>
  <button
    className="next"
    type="submit"
  >
    Next
    <img
      alt=""
      src={Object {}}
    />
  </button>
</div>
`;

exports[`submit first form 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Connect(Form(MultiStepsFormFirstPage))
    destroyOnUnmount={false}
    enableReinitialize={false}
    forceUnregisterOnUnmount={true}
    form="multi"
    getFormState={[Function]}
    initialValues={undefined}
    keepDirtyOnReinitialize={false}
    persistentSubmitErrors={false}
    pure={true}
    shouldAsyncValidate={[Function]}
    shouldValidate={[Function]}
    touchOnBlur={true}
    touchOnChange={false}
    validate={[Function]}
/>,
  "nodes": Array [
    <Connect(Form(MultiStepsFormFirstPage))
      destroyOnUnmount={false}
      enableReinitialize={false}
      forceUnregisterOnUnmount={true}
      form="multi"
      getFormState={[Function]}
      initialValues={undefined}
      keepDirtyOnReinitialize={false}
      persistentSubmitErrors={false}
      pure={true}
      shouldAsyncValidate={[Function]}
      shouldValidate={[Function]}
      touchOnBlur={true}
      touchOnChange={false}
      validate={[Function]}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <ReduxForm />,
      "_debugID": 6,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": ReduxForm {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Connect(Form(MultiStepsFormFirstPage))
          destroyOnUnmount={false}
          enableReinitialize={false}
          forceUnregisterOnUnmount={true}
          form="multi"
          getFormState={[Function]}
          initialValues={undefined}
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldValidate={[Function]}
          touchOnBlur={true}
          touchOnChange={false}
          validate={[Function]}
/>,
        "_debugID": 7,
        "_renderedOutput": <Connect(Form(MultiStepsFormFirstPage))
          destroyOnUnmount={false}
          enableReinitialize={false}
          forceUnregisterOnUnmount={true}
          form="multi"
          getFormState={[Function]}
          initialValues={undefined}
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldValidate={[Function]}
          touchOnBlur={true}
          touchOnChange={false}
          validate={[Function]}
/>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ReduxForm />,
}
`;

exports[`submit first form 2`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Connect(Form(MultiStepsFormFirstPage))
    destroyOnUnmount={false}
    enableReinitialize={false}
    forceUnregisterOnUnmount={true}
    form="multi"
    getFormState={[Function]}
    initialValues={undefined}
    keepDirtyOnReinitialize={false}
    persistentSubmitErrors={false}
    pure={true}
    shouldAsyncValidate={[Function]}
    shouldValidate={[Function]}
    touchOnBlur={true}
    touchOnChange={false}
    validate={[Function]}
/>,
  "nodes": Array [
    <Connect(Form(MultiStepsFormFirstPage))
      destroyOnUnmount={false}
      enableReinitialize={false}
      forceUnregisterOnUnmount={true}
      form="multi"
      getFormState={[Function]}
      initialValues={undefined}
      keepDirtyOnReinitialize={false}
      persistentSubmitErrors={false}
      pure={true}
      shouldAsyncValidate={[Function]}
      shouldValidate={[Function]}
      touchOnBlur={true}
      touchOnChange={false}
      validate={[Function]}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <ReduxForm />,
      "_debugID": 6,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": ReduxForm {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Connect(Form(MultiStepsFormFirstPage))
          destroyOnUnmount={false}
          enableReinitialize={false}
          forceUnregisterOnUnmount={true}
          form="multi"
          getFormState={[Function]}
          initialValues={undefined}
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldValidate={[Function]}
          touchOnBlur={true}
          touchOnChange={false}
          validate={[Function]}
/>,
        "_debugID": 7,
        "_renderedOutput": <Connect(Form(MultiStepsFormFirstPage))
          destroyOnUnmount={false}
          enableReinitialize={false}
          forceUnregisterOnUnmount={true}
          form="multi"
          getFormState={[Function]}
          initialValues={undefined}
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldValidate={[Function]}
          touchOnBlur={true}
          touchOnChange={false}
          validate={[Function]}
/>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ReduxForm />,
}
`;

exports[`submit second form 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Connect(Form(Connect(MultiStepsFormSecondPage)))
    destroyOnUnmount={false}
    enableReinitialize={false}
    forceUnregisterOnUnmount={true}
    form="multi"
    getFormState={[Function]}
    initialValues={undefined}
    keepDirtyOnReinitialize={false}
    persistentSubmitErrors={false}
    pure={true}
    shouldAsyncValidate={[Function]}
    shouldValidate={[Function]}
    touchOnBlur={true}
    touchOnChange={false}
    validate={[Function]}
/>,
  "nodes": Array [
    <Connect(Form(Connect(MultiStepsFormSecondPage)))
      destroyOnUnmount={false}
      enableReinitialize={false}
      forceUnregisterOnUnmount={true}
      form="multi"
      getFormState={[Function]}
      initialValues={undefined}
      keepDirtyOnReinitialize={false}
      persistentSubmitErrors={false}
      pure={true}
      shouldAsyncValidate={[Function]}
      shouldValidate={[Function]}
      touchOnBlur={true}
      touchOnChange={false}
      validate={[Function]}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <ReduxForm />,
      "_debugID": 10,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": ReduxForm {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Connect(Form(Connect(MultiStepsFormSecondPage)))
          destroyOnUnmount={false}
          enableReinitialize={false}
          forceUnregisterOnUnmount={true}
          form="multi"
          getFormState={[Function]}
          initialValues={undefined}
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldValidate={[Function]}
          touchOnBlur={true}
          touchOnChange={false}
          validate={[Function]}
/>,
        "_debugID": 11,
        "_renderedOutput": <Connect(Form(Connect(MultiStepsFormSecondPage)))
          destroyOnUnmount={false}
          enableReinitialize={false}
          forceUnregisterOnUnmount={true}
          form="multi"
          getFormState={[Function]}
          initialValues={undefined}
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldValidate={[Function]}
          touchOnBlur={true}
          touchOnChange={false}
          validate={[Function]}
/>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ReduxForm />,
}
`;

exports[`submit second form 2`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Connect(Form(Connect(MultiStepsFormSecondPage)))
    destroyOnUnmount={false}
    enableReinitialize={false}
    forceUnregisterOnUnmount={true}
    form="multi"
    getFormState={[Function]}
    initialValues={undefined}
    keepDirtyOnReinitialize={false}
    persistentSubmitErrors={false}
    pure={true}
    shouldAsyncValidate={[Function]}
    shouldValidate={[Function]}
    touchOnBlur={true}
    touchOnChange={false}
    validate={[Function]}
/>,
  "nodes": Array [
    <Connect(Form(Connect(MultiStepsFormSecondPage)))
      destroyOnUnmount={false}
      enableReinitialize={false}
      forceUnregisterOnUnmount={true}
      form="multi"
      getFormState={[Function]}
      initialValues={undefined}
      keepDirtyOnReinitialize={false}
      persistentSubmitErrors={false}
      pure={true}
      shouldAsyncValidate={[Function]}
      shouldValidate={[Function]}
      touchOnBlur={true}
      touchOnChange={false}
      validate={[Function]}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <ReduxForm />,
      "_debugID": 10,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": ReduxForm {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {},
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Connect(Form(Connect(MultiStepsFormSecondPage)))
          destroyOnUnmount={false}
          enableReinitialize={false}
          forceUnregisterOnUnmount={true}
          form="multi"
          getFormState={[Function]}
          initialValues={undefined}
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldValidate={[Function]}
          touchOnBlur={true}
          touchOnChange={false}
          validate={[Function]}
/>,
        "_debugID": 11,
        "_renderedOutput": <Connect(Form(Connect(MultiStepsFormSecondPage)))
          destroyOnUnmount={false}
          enableReinitialize={false}
          forceUnregisterOnUnmount={true}
          form="multi"
          getFormState={[Function]}
          initialValues={undefined}
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldValidate={[Function]}
          touchOnBlur={true}
          touchOnChange={false}
          validate={[Function]}
/>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ReduxForm />,
}
`;
